[project]
name = "multi-provider-media-skill"
version = "1.0.0"
description = "Multi-provider AI media generation skill for Qwen, Gemini Imagen, and Agens-AI"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[tool.uv]
python-downloads = "automatic"
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
]
